# panaetius

./: .gitignore  CHANGELOG.md  README.md  README.rst  cliff.toml  duties.py  prospector.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  rewrite.todo  setup.py
docs/: todo.todo
docs/source/: changelog.rst  conf.py  configuration.rst  introduction.rst  toc.rst
docs/source/modules/: modules.rst  panaetius.config.rst  panaetius.config_inst.rst  panaetius.db.rst  panaetius.header.rst  panaetius.library.rst  panaetius.logging.rst  panaetius.rst
old_src/panaetius/: config.py
panaetius/: __init__.py  config.py  exceptions.py  library.py  logging.py
panaetius/utilities/: __init__.py
src/panaetius/: config_inst.py  db.py  library.py
tests/: conftest.py  scratchpad.py  test.py  test_config.py  test_library.py  test_logging.py  test_panaetius.py
tests/data/without_header/: config.yml
tests/data/without_logging/panaetius_testing/: config.toml  config.yml
tests/test_config/without_logging/panaetius_testing/: config.toml
tests/test_utilities/: test_squasher.py
