[tool.poetry]
name = "panaetius"
version = "1.0"
description = "Module to gracefully handle a .config file/environment variables for scripts, with built in masking for sensitive options. Provides a Splunk friendly logger instance."
license = "MIT"
authors = ["dtomlinson <dtomlinson@panaetius.co.uk>"]
readme = "READEME.md"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
pylite = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"
pudb = "^2019.2"
McCabe = "^0.6.1"
YAPF = "^0.29.0"
pydocstyle = "^5.0"
Pyflakes = "^2.1"
Rope = "^0.16.0"
python-language-server = "^0.31.4"
pycodestyle = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
